fix: ui problem of compact theme (#1670)
* fix: graphical interface override tabs

* fix: link of markdown too longer

* fix: page tab designer override in compact theme

* feat: url should be ellipsis

--- a/packages/core/client/src/schema-component/antd/markdown/style.less
+++ b/packages/core/client/src/schema-component/antd/markdown/style.less
@@ -1,5 +1,8 @@
 .nb-markdown {
   line-height: 1.612;
+  a {
+    word-break: break-all;
+  }
 }
 
 .nb-markdown > *:last-child {
